<resources>
    <string name="app_name">Gamer</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Game Categories</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="menu_needhelp">Need Help</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_reviewhistory">Your Reviews</string>
    <string name="menu_aboutus">About Us</string>
    <string name="home_second">Home Second</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_mylocation">Your Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watch_game_trailer">Watch Game trailer</string>
    <string name="helper_text0">FirstName</string>


        <string name="map_key" translatable="false">AIzaSyDg3fQSGjwenI7V7inrngqDxMDOLeON3Pc</string>

</resources>
