<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_usericon_foreground"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_reviewhistory"
            android:icon="@drawable/ic_history_foreground"
            android:title="@string/menu_reviewhistory" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_aboutus" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />
    </group>
</menu>
